[gd_scene load_steps=5 format=3 uid="uid://d1kat1ecfxk2n"]

[ext_resource type="Script" path="res://tools/editor/timeline_items/EditorLyricPhraseTimelineItem.gd" id="1"]
[ext_resource type="PackedScene" path="res://tools/editor/timeline_items/EditorTimelineItemSelectedPanel.tscn" id="2"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.223529, 0.223529, 0.223529, 1)

[sub_resource type="GDScript" id="2"]
script/source = "extends Label

signal mouse_click(ev)

func _gui_input(event):
	if event is InputEventMouseButton:
		emit_signal(\"mouse_click\", event)
"

[node name="EditorTimelineItem" type="Panel"]
custom_minimum_size = Vector2(0, 35)
offset_right = 166.0
offset_bottom = 35.0
theme_override_styles/panel = SubResource("1")
script = ExtResource("1")

[node name="SelectedPanel" parent="." instance=ExtResource("2")]
layout_mode = 0
anchor_right = 0.0
anchor_bottom = 0.0

[node name="LyricsLabel" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartEndLabel" type="Label" parent="."]
layout_mode = 0
offset_top = -25.0
offset_right = 166.0
offset_bottom = -6.0
mouse_filter = 0
script = SubResource("2")
